# adrenalina

./: README.md  adrenalina.cabal  music.midi  stack.yaml
app/: Main.hs
src/: Lib.hs
